--- a/index (1).html
+++ b/index (1).html
@@ -1,9 +1,7 @@
 <!doctype html>
 <html>
 <head>
-
-
-<link rel="stylesheet"  href="stunning.css">
+<link rel="stylesheet"  href="./style.css">
 </head>
 <body>
 <div id="topbar">
@@ -13,8 +11,7 @@
         <a class="items">About</a>
         <a class="items">Blog</a>
         <a class="items">Jobs</a>
-     
-     </div>
+    </div>
 
      <button id="btn">Your account</button>
      </div>
